--- a/style.css
+++ b/style.css
@@ -3,3 +3,18 @@ h1, h2{
     color: rgb(0, 0, 0);
     margin: 3%;
 }
+
+.img01{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+article > p {
+    text-align: justify;
+    margin: 3%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
