--- a/style.css
+++ b/style.css
@@ -18,3 +18,32 @@ article > p {
     margin-right: auto;
     width: 50%;
 }
+
+.navbar {
+   margin-top: 5px;
+}
+
+@media screen and (max-width: 600px) {
+    article > p {
+        width: 95%;
+    }
+    .navbar a:hover {
+        background-color: #ddd;
+        color: black;
+    }
+    .img01 {
+        width: 90%;
+        height: auto;
+    }
+    .navbar{
+        overflow: hidden;
+        background-color: #333;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        margin-top: auto;
+    }
+    h1 {
+        margin-top: 17%;
+    }
+}
